@@ -12,7 +12,7 @@ $CIAO_ROOT = "$ENV{'CIAO_ROOT'}";
 $TAO_ROOT = "$ENV{'TAO_ROOT'}";
 $DANCE_ROOT = "$ENV{'DANCE_ROOT'}";
 
-$ENV{'CIAO_LOG_LEVEL'}=1;
+$ENV{'CIAO_LOG_LEVEL'}= $ENV{'CIAO_LOG_LEVEL'} || 1;
 
 $daemons_running = 0;
 $em_running = 0;
